Added service 10 with kafka