@@ -1,9 +1,7 @@
 package com.karl.ms7ticketservice.controller;
 
 import com.karl.ms7ticketservice.dto.TicketDTO;
-import com.karl.ms7ticketservice.exception.ResourceNotFoundException;
-import com.karl.ms7ticketservice.exception.TicketCreateException;
-import com.karl.ms7ticketservice.exception.TicketUpdateException;
+import com.karl.ms7ticketservice.exception.*;
 import com.karl.ms7ticketservice.service.TicketService;
 import com.karl.ms7ticketservice.utils.TicketDtoConverter;
 import org.springframework.http.HttpStatus;
@@ -11,6 +9,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.karl.ms7ticketservice.utils.TicketDtoConverter.toDto;
 
@@ -25,19 +24,21 @@ public class TicketController {
     }
 
     @GetMapping("/")
-    public ResponseEntity<List<TicketDTO>> getAllTickets() {
+    public ResponseEntity<List<TicketDTO>> getAllTickets()
+            throws FeignClientUnavailableException {
         return new ResponseEntity<>(
                 ticketService
                         .getAllTickets()
                         .stream().map(TicketDtoConverter::toDto)
-                        .toList(),
+                        .collect(Collectors.toList()),
                 HttpStatus.OK
         );
     }
 
     @GetMapping("/{ticketId}")
     public ResponseEntity<TicketDTO> getField(@PathVariable("ticketId") int ticketId)
-            throws ResourceNotFoundException {
+            throws ResourceNotFoundException,
+            FeignClientUnavailableException {
 
         return new ResponseEntity<>(
                 toDto(ticketService.getTicket(ticketId))
@@ -45,7 +46,11 @@ public class TicketController {
     }
 
     @PostMapping("/create")
-    public ResponseEntity<TicketDTO> createTicket (@RequestBody TicketDTO ticketDTO) throws TicketCreateException {
+    public ResponseEntity<TicketDTO> createTicket (@RequestBody TicketDTO ticketDTO)
+            throws TicketCreateException,
+            MissingOrNonExistentFieldException,
+            FeignClientUnavailableException,
+            ResourceNotFoundException {
         return new ResponseEntity<>(
                 toDto(ticketService.createTicket(ticketDTO)),
                 HttpStatus.CREATED
@@ -54,7 +59,10 @@ public class TicketController {
 
     @PutMapping("/update")
     public ResponseEntity<TicketDTO> updateField(@RequestBody TicketDTO ticketDTO)
-            throws TicketUpdateException, ResourceNotFoundException {
+            throws TicketUpdateException,
+            ResourceNotFoundException,
+            MissingOrNonExistentFieldException,
+            FeignClientUnavailableException {
 
         return new ResponseEntity<>(
                 toDto(ticketService.updateTicket(ticketDTO)),
